deploy/observability/prometheus/service.yaml
# Service Prometheus
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: dani
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
