deploy/observability/prometheus/ingress.yaml
# Ingress Prometheus (dashboard)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: dani
spec:
  rules:
    - host: prometheus.iict-rad.iict-heig-vd.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-svc
                port:
                  number: 9090
